@@ -1,4 +1,3 @@
-export(R_version_in_a_folder)
 export(ask.user.yn.question)
 export(barplot_package_users_per_day)
 export(browse.latest.R.NEWS)
@@ -13,39 +12,40 @@ export(format_RStudio_CRAN_data)
 export(freegeoip)
 export(get.installed.R.folders)
 export(install.7zip)
-export(install.Cygwin)
-export(install.FFmpeg)
-export(install.GitHub)
-export(install.GraphicsMagick)
-export(install.ImageMagick)
-export(install.LaTeX2RTF)
-export(install.LyX)
-export(install.MikTeX)
-export(install.R)
-export(install.RStudio)
-export(install.Rtools)
-export(install.SWFTools)
-export(install.URL)
 export(install.cygwin)
+export(install.Cygwin)
 export(install.ffmpeg)
+export(install.FFmpeg)
 export(install.git)
 export(install.github)
+export(install.GitHub)
 export(install.graphicsmagick)
+export(install.GraphicsMagick)
 export(install.imagemagick)
+export(install.ImageMagick)
 export(install.latex2rtf)
+export(install.LaTeX2RTF)
 export(install.lyx)
+export(install.LyX)
 export(install.miktex)
+export(install.MikTeX)
 export(install.notepadpp)
 export(install.npptor)
 export(install.packages.zip)
 export(install.pandoc)
+export(install.R)
+export(install.Rdevel)
 export(install.rstudio)
+export(install.RStudio)
 export(install.rtools)
+export(install.Rtools)
 export(install.swftools)
+export(install.SWFTools)
+export(install.URL)
 export(installr)
-export(is.RStudio)
-export(is.Rgui)
 export(is.empty)
+export(is.Rgui)
+export(is.RStudio)
 export(is.windows)
 export(lineplot_package_downloads)
 export(most_downloaded_packages)
@@ -56,11 +56,12 @@ export(os.manage)
 export(os.restart)
 export(os.shutdown)
 export(os.sleep)
+export(R_version_in_a_folder)
 export(read_RStudio_CRAN_data)
 export(require2)
 export(restart_RGui)
 export(source.https)
 export(system.PATH)
-export(uninstall.R)
 export(uninstall.r)
+export(uninstall.R)
 export(updateR)
